--- a/package.json
+++ b/package.json
@@ -20,10 +20,19 @@
     "@3nvi/gatsby-theme-intl": "^0.4.12",
     "@apollo/client": "^3.0.0-rc.10",
     "@apollo/link-ws": "^2.0.0-beta.3",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
     "@chakra-ui/core": "^0.8.0",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
+    "@storybook/addon-actions": "^5.3.19",
+    "@storybook/addon-docs": "^5.3.19",
+    "@storybook/react": "^5.3.19",
     "apollo-link-context": "^1.0.20",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-remove-graphql-queries": "^2.9.12",
     "emotion-theming": "^10.0.27",
     "gatsby": "^2.23.12",
     "gatsby-image": "^2.4.9",
@@ -43,6 +52,7 @@
     "isomorphic-fetch": "^2.2.1",
     "nhost-js-sdk": "^2.0.4",
     "react": "^16.13.1",
+    "react-docgen-typescript-loader": "^3.7.2",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^5.7.2",
@@ -66,7 +76,7 @@
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
     "prettier": "^2.0.5",
-    "typescript": "^3.9.5"
+    "typescript": "^3.9.6"
   },
   "publishConfig": {
     "access": "public"
@@ -81,7 +91,9 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "storybook": "NODE_ENV=production start-storybook -s ./public -p 6006 --ci",
+    "build-storybook": "NODE_ENV=production build-storybook"
   },
   "repository": {
     "type": "git",
