--- a/package.json
+++ b/package.json
@@ -69,13 +69,16 @@
     "@types/recoil": "^0.0.1",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "@typescript-eslint/parser": "^3.5.0",
+    "cypress": "^4.10.0",
     "eslint": "^7.3.1",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.3",
+    "gatsby-cypress": "^0.4.10",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
     "prettier": "^2.0.5",
+    "start-server-and-test": "^1.11.1",
     "typescript": "^3.9.6"
   },
   "publishConfig": {
@@ -93,7 +96,9 @@
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
     "storybook": "NODE_ENV=production start-storybook -s ./public -p 6006 --ci",
-    "build-storybook": "NODE_ENV=production build-storybook"
+    "build-storybook": "NODE_ENV=production build-storybook",
+    "cy:open": "cypress open",
+    "test:e2e": "start-server-and-test develop http://localhost:8000 cy:open"
   },
   "repository": {
     "type": "git",
